index.html update

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!--шапка сайта-->
     <header>
       <nav>
-       <a href="index.html" class="logo link"> <span class="web-color">Web</span> Studio </a>
+       <a href="./index.html" class="logo link"> <span class="web-color">Web</span> Studio </a>
        
        <ul class="nav list">
-         <li><a href="/Студия" class="nav-link link current">Студия</a></li>
-         <li><a href="/Портфолио" class="nav-link link">Портфолио</a></li>
-         <li><a href="/Контакты" class="nav-link link">Контакты</a></li>
+         <li><a href="./index.html" class="nav-link link current">Студия</a></li>
+         <li><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
+         <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
        </ul>
       
        <ul class="auth list">
