--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!--шапка сайта-->
     <header>
       <nav>
-       <a href="index.html" class="logo link"> <span class="web-color">Web</span> Studio </a>
+       <a href="./index.html" class="logo link"> <span class="web-color">Web</span> Studio </a>
        
        <ul class="nav list">
          <li><a href="./index.html" class="nav-link link">Студия</a></li>
