portfolio.html & styles.css update

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <main>
 
       <!--секция Наши работы-->
-      <section>
+      <section class="section">
         <h1 class="hidden">Портфолио</h1>
 
         <ul class="list">
@@ -46,76 +46,76 @@
           <li><button type="button">Маркетинг</button></li>
         </ul>
 
-        <ul class="list">
+        <ul class=" work list">
           <li>
             <a href="" class="link"><img src="./images/tehno.jpg" alt="ноутбук" width="370" height="294">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Технокряк</h2>
+            <p class="work-type">Веб-сайт</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/poster.jpg" alt="постер" width="370" height="294">
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
-            <p>Дизайн</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
+            <p class="work-type">Дизайн</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/seafood.jpg" alt="ресторан" width="370" height="294">
-            <h2>Ресторан <span lang="en">Seafood</span> </h2>
-            <p>Приложение</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Ресторан <span lang="en">Seafood</span> </h2>
+            <p class="work-type">Приложение</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/headphones.jpg" alt="наушники" width="370" height="294">
-            <h2>Проект <span lang="en">Prime</span> </h2>
-            <p>Маркетинг</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Проект <span lang="en">Prime</span> </h2>
+            <p class="work-type">Маркетинг</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/boxes.jpg" alt="коробки" width="370" height="294">
-            <h2>Проект <span lang="en">Boxes</span> </h2>
-            <p>Приложение</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Проект <span lang="en">Boxes</span> </h2>
+            <p class="work-type">Приложение</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/monitor.jpg" alt="монитор" width="370" height="294">
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 lang="en" class="work-title">Inspiration has no Borders</h2>
+            <p class="work-type">Веб-сайт</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/magazine.jpg" alt="журнал" width="370" height="294">
-            <h2>Издание <span lang="en">Limited Edition</span> </h2>
-            <p>Дизайн</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Издание <span lang="en">Limited Edition</span> </h2>
+            <p class="work-type">Дизайн</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/label.jpg" alt="бирка" width="370" height="294">
-            <h2>Проект <span lang="en">LAB</span> </h2>
-            <p>Маркетинг</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 class="work-title">Проект <span lang="en">LAB</span> </h2>
+            <p class="work-type">Маркетинг</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
           <li>
             <a href="" class="link"><img src="./images/growing.jpg" alt="коробки" width="370" height="294">
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
-            <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+            <h2 lang="en" class="work-title">Growing Business</h2>
+            <p class="work-type">Приложение</p>
+            <p class="work-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </a>
           </li>
 
@@ -128,34 +128,35 @@
     <!--Footer-->
     <footer>
 
-        <div>
-          <a href="./index.html" class="logo link"><span class="web-color">Web</span>Studio</a>
-          <address> 
-            г. Киев, пр-т Леси Украинки, 26 <br />
-            <a href="mailto:info@example.com">info@example.com</a> <br />
-            <a href="tel:380991111111">+38 099 111 11 11</a>
-          </address> 
-        </div>
-  
-        <div>
-          <b>Присоединяйтесь</b>
-          <!--нужно прописать ссылки переходов на соц. сети студии и потом в CSS сделать встроенные изображения-->       
-          <ul class="list">         
-            <li><a href="" aria-label="ссылка на Instagram">Instagram </a></li>
-            <li><a href="" aria-label="ссылка на Twitter">Twitter </a></li>
-            <li><a href="" aria-label="ссылка на Facebook">Facebook </a></li>
-            <li><a href="" aria-label="ссылка на Linkedin">Linkedin </a></li>
-          </ul>
-        </div>
-  
-        <div>
-          <b>Подпишитесь на рассылку</b>
-          <!--форма заполнения мейла-->
-          <a href="" class="button primary">Подписаться</a>
-  
-        </div>
-              
-      </footer>
+      <div class="logo-style">
+        <a href="./index.html" class="logo link"><span class="web-color">Web</span>Studio</a>
+
+        <address> 
+          г. Киев, пр-т Леси Украинки, 26 <br />
+          <a href="mailto:info@example.com" class="link">info@example.com</a> <br />
+          <a href="tel:380991111111" class="link">+38 099 111 11 11</a>
+        </address> 
+      </div>
+
+      <div>
+        <b class="action">Присоединяйтесь</b>
+        <!--нужно прописать ссылки переходов на соц. сети студии и потом в CSS сделать встроенные изображения-->       
+        <ul class=" action-link list">         
+          <li><a href="" class="link" aria-label="ссылка на Instagram">Instagram </a></li>
+          <li><a href="" class="link" aria-label="ссылка на Twitter">Twitter </a></li>
+          <li><a href="" class="link" aria-label="ссылка на Facebook">Facebook </a></li>
+          <li><a href="" class="link" aria-label="ссылка на Linkedin">Linkedin </a></li>
+        </ul>
+      </div>
+
+      <div>
+        <b class="action">Подпишитесь на рассылку</b>
+        <!--форма заполнения мейла-->
+        <a href="" class="button primary">Подписаться</a>
+
+      </div>
+
+    </footer>
        
     </body>
   
