--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <!--1st section Hero-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения <br /> для вашего бизнеса</h1>
         <!--нужно прописать ссылки переходов на страницы-->
         <a href="" class="button primary">Заказать услугу</a>
         <!-- <img src="./images/header.jpg" alt="рабочий процесс" width="1600" height="600"> -->
@@ -46,7 +46,7 @@
       <section class="section">
 
         <!--h2 is hidden on page-->
-        <h2 class="section-title hidden">Features of work</h2>
+        <h2 class="section-title hidden">Особенности работы</h2>
 
         <ul class="features list">
           <li>
@@ -189,11 +189,11 @@
       <div>
         <b class="action">Присоединяйтесь</b>
         <!--нужно прописать ссылки переходов на соц. сети студии и потом в CSS сделать встроенные изображения-->       
-        <ul class="list">         
-          <li><a href="" class="action-social" aria-label="ссылка на Instagram">Instagram </a></li>
-          <li><a href="" aria-label="ссылка на Twitter">Twitter </a></li>
-          <li><a href="" aria-label="ссылка на Facebook">Facebook </a></li>
-          <li><a href="" aria-label="ссылка на Linkedin">Linkedin </a></li>
+        <ul class=" action-link list">         
+          <li><a href="" class="link" aria-label="ссылка на Instagram">Instagram </a></li>
+          <li><a href="" class="link" aria-label="ссылка на Twitter">Twitter </a></li>
+          <li><a href="" class="link" aria-label="ссылка на Facebook">Facebook </a></li>
+          <li><a href="" class="link" aria-label="ссылка на Linkedin">Linkedin </a></li>
         </ul>
       </div>
 
