--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Web development"/>
     <title>Студия</title>    
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,900&display=swap" rel="stylesheet"/> 
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   
   <body>
@@ -162,12 +163,12 @@
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul class="clients list">
           <!--нужно прописать ссылки переходов на сайты компаний и потом в CSS сделать встроенные изображения-->
-          <li><a href="" class="client-logo"> <img src="./images/client1.svg" alt="Логотип клиента 1" width="44.27"> </a></li>
+          <li><a href="" class="client-logo"> <img src="./images/client1.svg" alt="Логотип клиента 1" width="44"> </a></li>
           <li><a href="" class="client-logo"> <img src="./images/client2.svg" alt="Логотип клиента 2" width="40"> </a></li>
           <li><a href="" class="client-logo"> <img src="./images/client3.svg" alt="Логотип клиента 3" width="41"> </a></li>
-          <li><a href="" class="client-logo"> <img src="./images/client4.svg" alt="Логотип клиента 4" width="79.66"> </a></li>
+          <li><a href="" class="client-logo"> <img src="./images/client4.svg" alt="Логотип клиента 4" width="80"> </a></li>
           <li><a href="" class="client-logo"> <img src="./images/client5.svg" alt="Логотип клиента 5" width="59"> </a></li>
-          <li><a href="" class="client-logo"> <img src="./images/client6.svg" alt="Логотип клиента 6" width="88.48"> </a></li>
+          <li><a href="" class="client-logo"> <img src="./images/client6.svg" alt="Логотип клиента 6" width="88"> </a></li>
         </ul>
       </section>
       
