--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Web development"/>
     <title>Портфолио</title>    
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,900&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/normalize.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,900&display=swap" rel="stylesheet"/> 
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   
   <body>   
@@ -39,11 +40,11 @@
         <h1 class="hidden">Портфолио</h1>
 
         <ul class="list">
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button"> <span class="button-icon" ></span> Все</button></li>
+          <li><button type="button"> <span class="button-icon" ></span> Веб-сайты</button></li>
+          <li><button type="button"> <span class="button-icon" ></span> Приложения</button></li>
+          <li><button type="button"> <span class="button-icon" ></span> Дизайн</button></li>
+          <li><button type="button"> <span class="button-icon" ></span> Маркетинг</button></li>
         </ul>
 
         <ul class=" work list">
